FindBugs fixes - use valueOf methods instead of new'ing primitive wrapper types
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@17383 7fc7bbf3-cf45-46d4-be06-341739edd864