@@ -40,7 +40,7 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
 
   public final static String  TC_NULL_RETURN_PUT_METHOD_NAME        = "nullReturnPut";
   public final static String  TC_NULL_RETURN_PUT_METHOD_DESC        = "(Ljava/lang/Object;ILjava/lang/Object;Z)Ljava/lang/Object;";
-  
+
   private final static String TC_CLEAR_METHOD_NAME                  = ByteCodeUtil.TC_METHOD_PREFIX + "clear";
   private final static String TC_CLEAR_METHOD_DESC                  = "()V";
 
@@ -61,21 +61,29 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
     super(cv);
   }
 
+  @Override
   public void visit(int version, int access, String name, String signature, String superName, String[] interfaces) {
     super.visit(version, access, name, signature, "java/util/concurrent/locks/ReentrantReadWriteLock", interfaces);
   }
 
+  @Override
   public MethodVisitor visitMethod(int access, String name, String desc, String signature, String[] exceptions) {
     if ("get".equals(name) && "(Ljava/lang/Object;I)Ljava/lang/Object;".equals(desc)) {
       return new MulticastMethodVisitor(new MethodVisitor[] {
-        // rename the original, totally un-instrumented get method
-        super.visitMethod(ACC_SYNTHETIC, TC_ORIG_GET_METHOD_NAME, TC_ORIG_GET_METHOD_DESC, null, null),
-        // adapt the get method
-        new JavaUtilConcurrentHashMapLazyValuesMethodAdapter(access, desc, addWrapperMethod(access, name, desc, signature, exceptions), true)});
+          // rename the original, totally un-instrumented get method
+          super.visitMethod(ACC_SYNTHETIC, TC_ORIG_GET_METHOD_NAME, TC_ORIG_GET_METHOD_DESC, null, null),
+          // adapt the get method
+          new JavaUtilConcurrentHashMapLazyValuesMethodAdapter(access, desc, addWrapperMethod(access, name, desc,
+                                                                                              signature, exceptions),
+                                                               true) });
     } else if ("containsValue".equals(name) && "(Ljava/lang/Object;)Z".equals(desc)) {
-      return new JavaUtilConcurrentHashMapLazyValuesMethodAdapter(access, desc, super.visitMethod(access, name, desc, signature, exceptions), true);
+      return new JavaUtilConcurrentHashMapLazyValuesMethodAdapter(access, desc,
+                                                                  super.visitMethod(access, name, desc, signature,
+                                                                                    exceptions), true);
     } else if ("containsKey".equals(name) && "(Ljava/lang/Object;I)Z".equals(desc)) {
-      return new JavaUtilConcurrentHashMapLazyValuesMethodAdapter(access, desc, addWrapperMethod(access, name, desc, signature, exceptions), false);
+      return new JavaUtilConcurrentHashMapLazyValuesMethodAdapter(access, desc,
+                                                                  addWrapperMethod(access, name, desc, signature,
+                                                                                   exceptions), false);
     } else {
       String description = desc;
       if ("<init>".equals(name) && "(IF)V".equals(desc)) {
@@ -84,42 +92,143 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
 
       MethodVisitor mv = super.visitMethod(access, name, description, signature, exceptions);
       if ("put".equals(name) && "(Ljava/lang/Object;ILjava/lang/Object;Z)Ljava/lang/Object;".equals(desc)) {
-        return new MulticastMethodVisitor(new MethodVisitor[] {
-          // rename the original, totally un-instrumented put method so that it can be used by the CHM applicator
-          super.visitMethod(ACC_SYNTHETIC, TC_ORIG_PUT_METHOD_NAME, TC_ORIG_PUT_METHOD_DESC, null, null),
-          // create an adapted put method that returns nulls for the old values and thus doesn't fault them in
-          new PutNullOldValueMethodAdapter(new PutMethodAdapter(new JavaUtilConcurrentHashMapLazyValuesMethodAdapter(access, desc, super.visitMethod(ACC_SYNTHETIC, TC_NULL_RETURN_PUT_METHOD_NAME, TC_NULL_RETURN_PUT_METHOD_DESC, null, null), false))),
-          // adapt the put method
-          new PutMethodAdapter(new JavaUtilConcurrentHashMapLazyValuesMethodAdapter(access, desc, mv, false)),
-          // This creates the identical copy of the put() method of Segments except that it does not lock and does
-          // not invoke the instrumented version of the logicalInvoke(). The reason that it does not require
-          // locking is because it is called from the __tc_rehash() instrumented method and the lock is grabbed
-          // at the __tc_rehash() method already.
-          new RemoveLockUnlockMethodAdapter(new JavaUtilConcurrentHashMapLazyValuesMethodAdapter(access, desc, super.visitMethod(ACC_SYNTHETIC, TC_PUT_METHOD_NAME, TC_PUT_METHOD_DESC, null, null), false))});
-      } else if ("remove".equals(name) && "(Ljava/lang/Object;ILjava/lang/Object;)Ljava/lang/Object;".equals(desc)) {
-        return new MulticastMethodVisitor(new MethodVisitor[] {
-          // rename the original, totally un-instrumented remove method so that it can be used by the CHM applicator
-          super.visitMethod(ACC_SYNTHETIC, TC_ORIG_REMOVE_METHOD_NAME, TC_ORIG_REMOVE_METHOD_DESC, null, null),
-          // create an adapted remove method that returns nulls for the old values and thus doesn't fault them in
-          new RemoveNullOldValueMethodAdapter(new JavaUtilConcurrentHashMapLazyValuesMethodAdapter(access, desc, new RemoveMethodAdapter(super.visitMethod(ACC_SYNTHETIC, TC_NULL_RETURN_REMOVE_METHOD_NAME, TC_NULL_RETURN_REMOVE_METHOD_DESC, null, null)), false)),
-          // adapt the remove method
-          new RemoveMethodAdapter(new JavaUtilConcurrentHashMapLazyValuesMethodAdapter(access, desc, mv, false))});
-      }
+        return new MulticastMethodVisitor(
+                                          new MethodVisitor[] {
+                                              // rename the original, totally un-instrumented put method so that it can
+                                              // be used by the CHM applicator
+                                              super.visitMethod(ACC_SYNTHETIC, TC_ORIG_PUT_METHOD_NAME,
+                                                                TC_ORIG_PUT_METHOD_DESC, null, null),
+                                              // create an adapted put method that returns nulls for the old values and
+                                              // thus doesn't fault them in
+                                              new PutNullOldValueMethodAdapter(
+                                                                               new PutMethodAdapter(
+                                                                                                    new JavaUtilConcurrentHashMapLazyValuesMethodAdapter(
+                                                                                                                                                         access,
+                                                                                                                                                         desc,
+                                                                                                                                                         super
+                                                                                                                                                             .visitMethod(ACC_SYNTHETIC,
+                                                                                                                                                                          TC_NULL_RETURN_PUT_METHOD_NAME,
+                                                                                                                                                                          TC_NULL_RETURN_PUT_METHOD_DESC,
+                                                                                                                                                                          null,
+                                                                                                                                                                          null),
+                                                                                                                                                         false))),
+                                              // adapt the put method
+                                              new PutMethodAdapter(
+                                                                   new JavaUtilConcurrentHashMapLazyValuesMethodAdapter(
+                                                                                                                        access,
+                                                                                                                        desc,
+                                                                                                                        mv,
+                                                                                                                        false)),
+                                              // This creates the identical copy of the put() method of Segments except
+                                              // that it does not lock and does
+                                              // not invoke the instrumented version of the logicalInvoke(). The reason
+                                              // that it does not require
+                                              // locking is because it is called from the __tc_rehash() instrumented
+                                              // method and the lock is grabbed
+                                              // at the __tc_rehash() method already.
+                                              new RemoveLockUnlockMethodAdapter(
+                                                                                new JavaUtilConcurrentHashMapLazyValuesMethodAdapter(
+                                                                                                                                     access,
+                                                                                                                                     desc,
+                                                                                                                                     super
+                                                                                                                                         .visitMethod(ACC_SYNTHETIC,
+                                                                                                                                                      TC_PUT_METHOD_NAME,
+                                                                                                                                                      TC_PUT_METHOD_DESC,
+                                                                                                                                                      null,
+                                                                                                                                                      null),
+                                                                                                                                     false)) });
+      } else if ("remove".equals(name) && "(Ljava/lang/Object;ILjava/lang/Object;)Ljava/lang/Object;".equals(desc)) { return new MulticastMethodVisitor(
+                                                                                                                                                        new MethodVisitor[] {
+                                                                                                                                                            // rename
+                                                                                                                                                            // the
+                                                                                                                                                            // original,
+                                                                                                                                                            // totally
+                                                                                                                                                            // un-instrumented
+                                                                                                                                                            // remove
+                                                                                                                                                            // method
+                                                                                                                                                            // so
+                                                                                                                                                            // that
+                                                                                                                                                            // it
+                                                                                                                                                            // can
+                                                                                                                                                            // be
+                                                                                                                                                            // used
+                                                                                                                                                            // by
+                                                                                                                                                            // the
+                                                                                                                                                            // CHM
+                                                                                                                                                            // applicator
+                                                                                                                                                            super
+                                                                                                                                                                .visitMethod(ACC_SYNTHETIC,
+                                                                                                                                                                             TC_ORIG_REMOVE_METHOD_NAME,
+                                                                                                                                                                             TC_ORIG_REMOVE_METHOD_DESC,
+                                                                                                                                                                             null,
+                                                                                                                                                                             null),
+                                                                                                                                                            // create
+                                                                                                                                                            // an
+                                                                                                                                                            // adapted
+                                                                                                                                                            // remove
+                                                                                                                                                            // method
+                                                                                                                                                            // that
+                                                                                                                                                            // returns
+                                                                                                                                                            // nulls
+                                                                                                                                                            // for
+                                                                                                                                                            // the
+                                                                                                                                                            // old
+                                                                                                                                                            // values
+                                                                                                                                                            // and
+                                                                                                                                                            // thus
+                                                                                                                                                            // doesn't
+                                                                                                                                                            // fault
+                                                                                                                                                            // them
+                                                                                                                                                            // in
+                                                                                                                                                            new RemoveNullOldValueMethodAdapter(
+                                                                                                                                                                                                new JavaUtilConcurrentHashMapLazyValuesMethodAdapter(
+                                                                                                                                                                                                                                                     access,
+                                                                                                                                                                                                                                                     desc,
+                                                                                                                                                                                                                                                     new RemoveMethodAdapter(
+                                                                                                                                                                                                                                                                             super
+                                                                                                                                                                                                                                                                                 .visitMethod(ACC_SYNTHETIC,
+                                                                                                                                                                                                                                                                                              TC_NULL_RETURN_REMOVE_METHOD_NAME,
+                                                                                                                                                                                                                                                                                              TC_NULL_RETURN_REMOVE_METHOD_DESC,
+                                                                                                                                                                                                                                                                                              null,
+                                                                                                                                                                                                                                                                                              null)),
+                                                                                                                                                                                                                                                     false)),
+                                                                                                                                                            // adapt
+                                                                                                                                                            // the
+                                                                                                                                                            // remove
+                                                                                                                                                            // method
+                                                                                                                                                            new RemoveMethodAdapter(
+                                                                                                                                                                                    new JavaUtilConcurrentHashMapLazyValuesMethodAdapter(
+                                                                                                                                                                                                                                         access,
+                                                                                                                                                                                                                                         desc,
+                                                                                                                                                                                                                                         mv,
+                                                                                                                                                                                                                                         false)) }); }
 
       final MethodVisitor visitor;
       if ("clear".equals(name) && "()V".equals(desc)) {
-        visitor = new MulticastMethodVisitor(new MethodVisitor[] {
-          new ClearMethodAdapter(mv),
-          super.visitMethod(ACC_SYNTHETIC, TC_ORIG_CLEAR_METHOD_NAME, TC_ORIG_CLEAR_METHOD_DESC, null, null),
-          // Again, this method does not require locking as it is called by __tc_rehash() which grabs the lock already.
-          new RemoveLockUnlockMethodAdapter(newLazyValuesAdapter(access, desc, super.visitMethod(ACC_SYNTHETIC, TC_CLEAR_METHOD_NAME, TC_CLEAR_METHOD_DESC, null, null)))});
+        visitor = new MulticastMethodVisitor(
+                                             new MethodVisitor[] {
+                                                 new ClearMethodAdapter(mv),
+                                                 super.visitMethod(ACC_SYNTHETIC, TC_ORIG_CLEAR_METHOD_NAME,
+                                                                   TC_ORIG_CLEAR_METHOD_DESC, null, null),
+                                                 // Again, this method does not require locking as it is called by
+                                                 // __tc_rehash() which grabs the lock already.
+                                                 new RemoveLockUnlockMethodAdapter(
+                                                                                   newLazyValuesAdapter(access,
+                                                                                                        desc,
+                                                                                                        super
+                                                                                                            .visitMethod(ACC_SYNTHETIC,
+                                                                                                                         TC_CLEAR_METHOD_NAME,
+                                                                                                                         TC_CLEAR_METHOD_DESC,
+                                                                                                                         null,
+                                                                                                                         null))) });
       } else if ("replace".equals(name) && "(Ljava/lang/Object;ILjava/lang/Object;)Ljava/lang/Object;".equals(desc)) {
         visitor = new ReplaceMethodAdapter(newLazyValuesAdapter(access, desc, mv));
       } else if ("replace".equals(name) && "(Ljava/lang/Object;ILjava/lang/Object;Ljava/lang/Object;)Z".equals(desc)) {
         visitor = new ReplaceIfValueEqualMethodAdapter(newLazyValuesAdapter(access, desc, mv));
       } else if ("<init>".equals(name) && "(IF)V".equals(desc)) {
         visitor = new InitMethodAdapter(newLazyValuesAdapter(access, desc, mv));
-      } else if ("readValueUnderLock".equals(name) && "(Ljava/util/concurrent/ConcurrentHashMap$HashEntry;)Ljava/lang/Object;".equals(desc)) {
+      } else if ("readValueUnderLock".equals(name)
+                 && "(Ljava/util/concurrent/ConcurrentHashMap$HashEntry;)Ljava/lang/Object;".equals(desc)) {
         visitor = new ReadValueUnderLockMethodAdapter(newLazyValuesAdapter(access, desc, mv));
       } else {
         visitor = mv;
@@ -133,7 +242,8 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
     }
   }
 
-  private JavaUtilConcurrentHashMapLazyValuesMethodAdapter newLazyValuesAdapter(int access, String desc, MethodVisitor mv) {
+  private JavaUtilConcurrentHashMapLazyValuesMethodAdapter newLazyValuesAdapter(int access, String desc,
+                                                                                MethodVisitor mv) {
     return new JavaUtilConcurrentHashMapLazyValuesMethodAdapter(access, desc, mv, false);
   }
 
@@ -168,7 +278,8 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
     mv.visitVarInsn(ILOAD, 3);
     mv.visitJumpInsn(IFEQ, l0);
     mv.visitVarInsn(ALOAD, 0);
-    mv.visitMethodInsn(INVOKEVIRTUAL, CONCURRENT_HASH_MAP_SEGMENT_SLASH, TC_READLOCK_METHOD_NAME, TC_READLOCK_METHOD_DESC);
+    mv.visitMethodInsn(INVOKEVIRTUAL, CONCURRENT_HASH_MAP_SEGMENT_SLASH, TC_READLOCK_METHOD_NAME,
+                       TC_READLOCK_METHOD_DESC);
     mv.visitLabel(l0);
     mv.visitLineNumber(283, l0);
     mv.visitVarInsn(ALOAD, 0);
@@ -183,7 +294,8 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
     Label l5 = new Label();
     mv.visitJumpInsn(IFEQ, l5);
     mv.visitVarInsn(ALOAD, 0);
-    mv.visitMethodInsn(INVOKEVIRTUAL, CONCURRENT_HASH_MAP_SEGMENT_SLASH, TC_READUNLOCK_METHOD_NAME, TC_READUNLOCK_METHOD_DESC);
+    mv.visitMethodInsn(INVOKEVIRTUAL, CONCURRENT_HASH_MAP_SEGMENT_SLASH, TC_READUNLOCK_METHOD_NAME,
+                       TC_READUNLOCK_METHOD_DESC);
     mv.visitLabel(l5);
     mv.visitLineNumber(283, l5);
     mv.visitVarInsn(returnType.getOpcode(ILOAD), 5);
@@ -198,7 +310,8 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
     Label l7 = new Label();
     mv.visitJumpInsn(IFEQ, l7);
     mv.visitVarInsn(ALOAD, 0);
-    mv.visitMethodInsn(INVOKEVIRTUAL, CONCURRENT_HASH_MAP_SEGMENT_SLASH, TC_READUNLOCK_METHOD_NAME, TC_READUNLOCK_METHOD_DESC);
+    mv.visitMethodInsn(INVOKEVIRTUAL, CONCURRENT_HASH_MAP_SEGMENT_SLASH, TC_READUNLOCK_METHOD_NAME,
+                       TC_READUNLOCK_METHOD_DESC);
     mv.visitLabel(l7);
     mv.visitLineNumber(286, l7);
     mv.visitVarInsn(ALOAD, 4);
@@ -209,6 +322,7 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
     mv.visitEnd();
   }
 
+  @Override
   public void visitEnd() {
     createDefaultConstructor();
     createInitTableMethod();
@@ -267,7 +381,8 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
     MethodVisitor mv = cv.visitMethod(ACC_PUBLIC, "lock", "()V", null, null);
     mv.visitCode();
     mv.visitVarInsn(ALOAD, 0);
-    mv.visitMethodInsn(INVOKEVIRTUAL, CONCURRENT_HASH_MAP_SEGMENT_SLASH, "writeLock", "()Ljava/util/concurrent/locks/ReentrantReadWriteLock$WriteLock;");
+    mv.visitMethodInsn(INVOKEVIRTUAL, CONCURRENT_HASH_MAP_SEGMENT_SLASH, "writeLock",
+                       "()Ljava/util/concurrent/locks/ReentrantReadWriteLock$WriteLock;");
     mv.visitMethodInsn(INVOKEVIRTUAL, "java/util/concurrent/locks/ReentrantReadWriteLock$WriteLock", "lock", "()V");
     mv.visitInsn(RETURN);
     mv.visitMaxs(1, 1);
@@ -278,7 +393,8 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
     MethodVisitor mv = cv.visitMethod(ACC_PUBLIC, "unlock", "()V", null, null);
     mv.visitCode();
     mv.visitVarInsn(ALOAD, 0);
-    mv.visitMethodInsn(INVOKEVIRTUAL, CONCURRENT_HASH_MAP_SEGMENT_SLASH, "writeLock", "()Ljava/util/concurrent/locks/ReentrantReadWriteLock$WriteLock;");
+    mv.visitMethodInsn(INVOKEVIRTUAL, CONCURRENT_HASH_MAP_SEGMENT_SLASH, "writeLock",
+                       "()Ljava/util/concurrent/locks/ReentrantReadWriteLock$WriteLock;");
     mv.visitMethodInsn(INVOKEVIRTUAL, "java/util/concurrent/locks/ReentrantReadWriteLock$WriteLock", "unlock", "()V");
     mv.visitInsn(RETURN);
     mv.visitMaxs(1, 1);
@@ -289,7 +405,8 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
     MethodVisitor mv = cv.visitMethod(ACC_PUBLIC, TC_READLOCK_METHOD_NAME, TC_READLOCK_METHOD_DESC, null, null);
     mv.visitCode();
     mv.visitVarInsn(ALOAD, 0);
-    mv.visitMethodInsn(INVOKEVIRTUAL, CONCURRENT_HASH_MAP_SEGMENT_SLASH, "readLock", "()Ljava/util/concurrent/locks/ReentrantReadWriteLock$ReadLock;");
+    mv.visitMethodInsn(INVOKEVIRTUAL, CONCURRENT_HASH_MAP_SEGMENT_SLASH, "readLock",
+                       "()Ljava/util/concurrent/locks/ReentrantReadWriteLock$ReadLock;");
     mv.visitMethodInsn(INVOKEVIRTUAL, "java/util/concurrent/locks/ReentrantReadWriteLock$ReadLock", "lock", "()V");
     mv.visitInsn(RETURN);
     mv.visitMaxs(1, 1);
@@ -300,7 +417,8 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
     MethodVisitor mv = cv.visitMethod(ACC_PUBLIC, TC_READUNLOCK_METHOD_NAME, TC_READUNLOCK_METHOD_DESC, null, null);
     mv.visitCode();
     mv.visitVarInsn(ALOAD, 0);
-    mv.visitMethodInsn(INVOKEVIRTUAL, CONCURRENT_HASH_MAP_SEGMENT_SLASH, "readLock", "()Ljava/util/concurrent/locks/ReentrantReadWriteLock$ReadLock;");
+    mv.visitMethodInsn(INVOKEVIRTUAL, CONCURRENT_HASH_MAP_SEGMENT_SLASH, "readLock",
+                       "()Ljava/util/concurrent/locks/ReentrantReadWriteLock$ReadLock;");
     mv.visitMethodInsn(INVOKEVIRTUAL, "java/util/concurrent/locks/ReentrantReadWriteLock$ReadLock", "unlock", "()V");
     mv.visitInsn(RETURN);
     mv.visitMaxs(1, 1);
@@ -326,17 +444,19 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
       super(mv);
     }
 
+    @Override
     public void visitInsn(int opcode) {
       if (RETURN == opcode) {
         ByteCodeUtil.pushThis(mv);
         mv.visitVarInsn(ALOAD, 1);
-        mv.visitFieldInsn(PUTFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH,
-                          PARENT_CONCURRENT_HASH_MAP_FIELD_NAME, "Ljava/util/concurrent/ConcurrentHashMap;");
+        mv.visitFieldInsn(PUTFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH, PARENT_CONCURRENT_HASH_MAP_FIELD_NAME,
+                          "Ljava/util/concurrent/ConcurrentHashMap;");
 
       }
       super.visitInsn(opcode);
     }
 
+    @Override
     public void visitVarInsn(int opcode, int var) {
       if (var == 1) {
         var = 2;
@@ -346,10 +466,10 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
       super.visitVarInsn(opcode, var);
     }
 
+    @Override
     public void visitMethodInsn(int opcode, String owner, String name, String desc) {
-      if (INVOKESPECIAL == opcode
-          && "java/util/concurrent/locks/ReentrantLock".equals(owner)
-          && "<init>".equals(name) && "()V".equals(desc)) {
+      if (INVOKESPECIAL == opcode && "java/util/concurrent/locks/ReentrantLock".equals(owner) && "<init>".equals(name)
+          && "()V".equals(desc)) {
         owner = "java/util/concurrent/locks/ReentrantReadWriteLock";
       }
 
@@ -362,13 +482,14 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
       super(mv);
     }
 
+    @Override
     public void visitFieldInsn(int opcode, String owner, String name, String desc) {
 
       if (PUTFIELD == opcode && "java/util/concurrent/ConcurrentHashMap$HashEntry".equals(owner)
           && "value".equals(name) && "Ljava/lang/Object;".equals(desc)) {
         addExistingHashEntryLogicalInvokeCall();
-      } else if (PUTFIELD == opcode && CONCURRENT_HASH_MAP_SEGMENT_SLASH.equals(owner)
-                 && "count".equals(name) && "I".equals(desc)) {
+      } else if (PUTFIELD == opcode && CONCURRENT_HASH_MAP_SEGMENT_SLASH.equals(owner) && "count".equals(name)
+                 && "I".equals(desc)) {
         addNewHashEntryLogicalInvokeCall();
       } else {
         super.visitFieldInsn(opcode, owner, name, desc);
@@ -377,26 +498,27 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
 
     private void addExistingHashEntryLogicalInvokeCall() {
       Label skipLogicalInvoke = new Label();
-                                                                                      //...entry, newvl
-      mv.visitInsn(DUP2);                                                             //...entry, newvl, entry, newvl
-      mv.visitInsn(POP);                                                              //...entry, newvl, entry
+      // ...entry, newvl
+      mv.visitInsn(DUP2); // ...entry, newvl, entry, newvl
+      mv.visitInsn(POP); // ...entry, newvl, entry
       mv.visitMethodInsn(INVOKEVIRTUAL, "java/util/concurrent/ConcurrentHashMap$HashEntry",
-                        JavaUtilConcurrentHashMapHashEntryAdapter.GET_VALUE_RAW, "()Ljava/lang/Object;"); //...entry, newvl, oldvl
-      mv.visitInsn(DUP2_X1);                                                          //...newvl, oldvl, entry, newvl, oldvl
-      mv.visitInsn(POP);                                                              //...newvl, oldvl, entry, newvl
-      mv.visitFieldInsn(PUTFIELD, "java/util/concurrent/ConcurrentHashMap$HashEntry",
-                        "value", "Ljava/lang/Object;");                               //...newvl, oldvl
-      mv.visitJumpInsn(IF_ACMPEQ, skipLogicalInvoke);                                 //...
-
+                         JavaUtilConcurrentHashMapHashEntryAdapter.GET_VALUE_RAW, "()Ljava/lang/Object;"); // ...entry,
+                                                                                                           // newvl,
+                                                                                                           // oldvl
+      mv.visitInsn(DUP2_X1); // ...newvl, oldvl, entry, newvl, oldvl
+      mv.visitInsn(POP); // ...newvl, oldvl, entry, newvl
+      mv.visitFieldInsn(PUTFIELD, "java/util/concurrent/ConcurrentHashMap$HashEntry", "value", "Ljava/lang/Object;"); // ...newvl,
+                                                                                                                      // oldvl
+      mv.visitJumpInsn(IF_ACMPEQ, skipLogicalInvoke); // ...
 
       ByteCodeUtil.pushThis(mv);
-      mv.visitFieldInsn(GETFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH,
-                        PARENT_CONCURRENT_HASH_MAP_FIELD_NAME, "Ljava/util/concurrent/ConcurrentHashMap;");
+      mv.visitFieldInsn(GETFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH, PARENT_CONCURRENT_HASH_MAP_FIELD_NAME,
+                        "Ljava/util/concurrent/ConcurrentHashMap;");
       mv.visitMethodInsn(INVOKESTATIC, "com/tc/object/bytecode/ManagerUtil", "isManaged", "(Ljava/lang/Object;)Z");
       mv.visitJumpInsn(IFEQ, skipLogicalInvoke);
       ByteCodeUtil.pushThis(mv);
-      mv.visitFieldInsn(GETFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH,
-                        PARENT_CONCURRENT_HASH_MAP_FIELD_NAME, "Ljava/util/concurrent/ConcurrentHashMap;");
+      mv.visitFieldInsn(GETFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH, PARENT_CONCURRENT_HASH_MAP_FIELD_NAME,
+                        "Ljava/util/concurrent/ConcurrentHashMap;");
       mv.visitLdcInsn(SerializationUtil.PUT_SIGNATURE);
       mv.visitInsn(ICONST_2);
       mv.visitTypeInsn(ANEWARRAY, "java/lang/Object");
@@ -419,16 +541,16 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
 
       mv.visitFieldInsn(PUTFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH, "count", "I");
       ByteCodeUtil.pushThis(mv);
-      mv.visitFieldInsn(GETFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH,
-                        PARENT_CONCURRENT_HASH_MAP_FIELD_NAME, "Ljava/util/concurrent/ConcurrentHashMap;");
+      mv.visitFieldInsn(GETFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH, PARENT_CONCURRENT_HASH_MAP_FIELD_NAME,
+                        "Ljava/util/concurrent/ConcurrentHashMap;");
       mv.visitMethodInsn(INVOKESTATIC, "com/tc/object/bytecode/ManagerUtil", "isManaged", "(Ljava/lang/Object;)Z");
       mv.visitJumpInsn(IFEQ, skipLogicalInvoke);
       mv.visitVarInsn(ILOAD, 4);
       Label l0 = new Label();
       mv.visitJumpInsn(IFEQ, l0);
       ByteCodeUtil.pushThis(mv);
-      mv.visitFieldInsn(GETFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH,
-                        PARENT_CONCURRENT_HASH_MAP_FIELD_NAME, "Ljava/util/concurrent/ConcurrentHashMap;");
+      mv.visitFieldInsn(GETFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH, PARENT_CONCURRENT_HASH_MAP_FIELD_NAME,
+                        "Ljava/util/concurrent/ConcurrentHashMap;");
       mv.visitLdcInsn(SerializationUtil.PUT_SIGNATURE);
       mv.visitInsn(ICONST_2);
       mv.visitTypeInsn(ANEWARRAY, "java/lang/Object");
@@ -445,8 +567,8 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
       mv.visitJumpInsn(GOTO, skipLogicalInvoke);
       mv.visitLabel(l0);
       ByteCodeUtil.pushThis(mv);
-      mv.visitFieldInsn(GETFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH,
-                        PARENT_CONCURRENT_HASH_MAP_FIELD_NAME, "Ljava/util/concurrent/ConcurrentHashMap;");
+      mv.visitFieldInsn(GETFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH, PARENT_CONCURRENT_HASH_MAP_FIELD_NAME,
+                        "Ljava/util/concurrent/ConcurrentHashMap;");
       mv.visitLdcInsn(SerializationUtil.PUT_SIGNATURE);
       mv.visitInsn(ICONST_2);
       mv.visitTypeInsn(ANEWARRAY, "java/lang/Object");
@@ -469,9 +591,9 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
       super(mv);
     }
 
+    @Override
     public void visitMethodInsn(int opcode, String owner, String name, String desc) {
-      if (CONCURRENT_HASH_MAP_SEGMENT_SLASH.equals(owner)
-          && ("lock".equals(name) || "unlock".equals(name))
+      if (CONCURRENT_HASH_MAP_SEGMENT_SLASH.equals(owner) && ("lock".equals(name) || "unlock".equals(name))
           && "()V".equals(desc)) {
         // insert a POP insertion instead, so that the reference to
         // 'this' is removed from the stack
@@ -487,6 +609,7 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
       super(mv);
     }
 
+    @Override
     public void visitFieldInsn(int opcode, String owner, String name, String desc) {
       super.visitFieldInsn(opcode, owner, name, desc);
       if (PUTFIELD == opcode && "java/util/concurrent/ConcurrentHashMap$HashEntry".equals(owner)
@@ -498,13 +621,13 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
     public void addLogicalInvokeReplaceMethodCall() {
       Label notManaged = new Label();
       ByteCodeUtil.pushThis(this);
-      mv.visitFieldInsn(GETFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH,
-                        PARENT_CONCURRENT_HASH_MAP_FIELD_NAME, "Ljava/util/concurrent/ConcurrentHashMap;");
+      mv.visitFieldInsn(GETFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH, PARENT_CONCURRENT_HASH_MAP_FIELD_NAME,
+                        "Ljava/util/concurrent/ConcurrentHashMap;");
       mv.visitMethodInsn(INVOKESTATIC, "com/tc/object/bytecode/ManagerUtil", "isManaged", "(Ljava/lang/Object;)Z");
       mv.visitJumpInsn(IFEQ, notManaged);
       mv.visitVarInsn(ALOAD, 0);
-      mv.visitFieldInsn(GETFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH,
-                        PARENT_CONCURRENT_HASH_MAP_FIELD_NAME, "Ljava/util/concurrent/ConcurrentHashMap;");
+      mv.visitFieldInsn(GETFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH, PARENT_CONCURRENT_HASH_MAP_FIELD_NAME,
+                        "Ljava/util/concurrent/ConcurrentHashMap;");
       mv.visitLdcInsn(SerializationUtil.PUT_SIGNATURE);
       mv.visitInsn(ICONST_2);
       mv.visitTypeInsn(ANEWARRAY, "java/lang/Object");
@@ -528,6 +651,7 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
       super(mv);
     }
 
+    @Override
     public void visitFieldInsn(int opcode, String owner, String name, String desc) {
       if (PUTFIELD == opcode && "java/util/concurrent/ConcurrentHashMap$HashEntry".equals(owner)
           && "value".equals(name) && "Ljava/lang/Object;".equals(desc)) {
@@ -539,13 +663,13 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
     public void addLogicalInvokeReplaceMethodCall() {
       Label notManaged = new Label();
       ByteCodeUtil.pushThis(mv);
-      mv.visitFieldInsn(GETFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH,
-                        PARENT_CONCURRENT_HASH_MAP_FIELD_NAME, "Ljava/util/concurrent/ConcurrentHashMap;");
+      mv.visitFieldInsn(GETFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH, PARENT_CONCURRENT_HASH_MAP_FIELD_NAME,
+                        "Ljava/util/concurrent/ConcurrentHashMap;");
       mv.visitMethodInsn(INVOKESTATIC, "com/tc/object/bytecode/ManagerUtil", "isManaged", "(Ljava/lang/Object;)Z");
       mv.visitJumpInsn(IFEQ, notManaged);
       ByteCodeUtil.pushThis(mv);
-      mv.visitFieldInsn(GETFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH,
-                        PARENT_CONCURRENT_HASH_MAP_FIELD_NAME, "Ljava/util/concurrent/ConcurrentHashMap;");
+      mv.visitFieldInsn(GETFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH, PARENT_CONCURRENT_HASH_MAP_FIELD_NAME,
+                        "Ljava/util/concurrent/ConcurrentHashMap;");
       mv.visitLdcInsn(SerializationUtil.PUT_SIGNATURE);
       mv.visitInsn(ICONST_2);
       mv.visitTypeInsn(ANEWARRAY, "java/lang/Object");
@@ -569,11 +693,10 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
       super(mv);
     }
 
+    @Override
     public void visitFieldInsn(int opcode, String owner, String name, String desc) {
       super.visitFieldInsn(opcode, owner, name, desc);
-      if (PUTFIELD == opcode
-          && CONCURRENT_HASH_MAP_SEGMENT_SLASH.equals(owner)
-          && "count".equals(name)
+      if (PUTFIELD == opcode && CONCURRENT_HASH_MAP_SEGMENT_SLASH.equals(owner) && "count".equals(name)
           && "I".equals(desc)) {
         addLogicalInvokeRemoveMethodCall();
       }
@@ -586,13 +709,13 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
       mv.visitLabel(logicalInvokeLabel);
 
       ByteCodeUtil.pushThis(mv);
-      mv.visitFieldInsn(GETFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH,
-                        PARENT_CONCURRENT_HASH_MAP_FIELD_NAME, "Ljava/util/concurrent/ConcurrentHashMap;");
+      mv.visitFieldInsn(GETFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH, PARENT_CONCURRENT_HASH_MAP_FIELD_NAME,
+                        "Ljava/util/concurrent/ConcurrentHashMap;");
       mv.visitMethodInsn(INVOKESTATIC, "com/tc/object/bytecode/ManagerUtil", "isManaged", "(Ljava/lang/Object;)Z");
       mv.visitJumpInsn(IFEQ, notManaged);
       mv.visitVarInsn(ALOAD, 0);
-      mv.visitFieldInsn(GETFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH,
-                        PARENT_CONCURRENT_HASH_MAP_FIELD_NAME, "Ljava/util/concurrent/ConcurrentHashMap;");
+      mv.visitFieldInsn(GETFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH, PARENT_CONCURRENT_HASH_MAP_FIELD_NAME,
+                        "Ljava/util/concurrent/ConcurrentHashMap;");
       mv.visitLdcInsn(SerializationUtil.REMOVE_SIGNATURE);
       mv.visitInsn(ICONST_1);
       mv.visitTypeInsn(ANEWARRAY, "java/lang/Object");
@@ -609,23 +732,23 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
 
   private static class PutNullOldValueMethodAdapter extends MethodAdapter implements Opcodes {
     private boolean previousIsHashEntryValue = false;
-    
+
     public PutNullOldValueMethodAdapter(MethodVisitor mv) {
       super(mv);
     }
-    
+
     private void restorePreviousHashEntryValue() {
       if (previousIsHashEntryValue) {
-        super.visitFieldInsn(GETFIELD, "java/util/concurrent/ConcurrentHashMap$HashEntry", "value", "Ljava/lang/Object;");
+        super.visitFieldInsn(GETFIELD, "java/util/concurrent/ConcurrentHashMap$HashEntry", "value",
+                             "Ljava/lang/Object;");
       }
       previousIsHashEntryValue = false;
     }
 
+    @Override
     public void visitFieldInsn(int opcode, String owner, String name, String desc) {
-      if (GETFIELD == opcode
-          && "java/util/concurrent/ConcurrentHashMap$HashEntry".equals(owner)
-          && "value".equals(name)
-          && "Ljava/lang/Object;".equals(desc)) {
+      if (GETFIELD == opcode && "java/util/concurrent/ConcurrentHashMap$HashEntry".equals(owner)
+          && "value".equals(name) && "Ljava/lang/Object;".equals(desc)) {
         previousIsHashEntryValue = true;
       } else {
         restorePreviousHashEntryValue();
@@ -633,6 +756,7 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
       }
     }
 
+    @Override
     public void visitVarInsn(int opcode, int var) {
       if (previousIsHashEntryValue && ASTORE == opcode) {
         super.visitInsn(POP);
@@ -644,111 +768,133 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
       super.visitVarInsn(opcode, var);
     }
 
+    @Override
     public AnnotationVisitor visitAnnotation(String desc, boolean visible) {
       restorePreviousHashEntryValue();
       return super.visitAnnotation(desc, visible);
     }
 
+    @Override
     public AnnotationVisitor visitAnnotationDefault() {
       restorePreviousHashEntryValue();
       return super.visitAnnotationDefault();
     }
 
+    @Override
     public void visitAttribute(Attribute attr) {
       restorePreviousHashEntryValue();
       super.visitAttribute(attr);
     }
 
+    @Override
     public void visitCode() {
       restorePreviousHashEntryValue();
       super.visitCode();
     }
 
+    @Override
     public void visitEnd() {
       restorePreviousHashEntryValue();
       super.visitEnd();
     }
 
+    @Override
     public void visitFrame(int type, int local, Object[] local2, int stack, Object[] stack2) {
       restorePreviousHashEntryValue();
       super.visitFrame(type, local, local2, stack, stack2);
     }
 
+    @Override
     public void visitIincInsn(int var, int increment) {
       restorePreviousHashEntryValue();
       super.visitIincInsn(var, increment);
     }
 
+    @Override
     public void visitInsn(int opcode) {
       restorePreviousHashEntryValue();
       super.visitInsn(opcode);
     }
 
+    @Override
     public void visitIntInsn(int opcode, int operand) {
       restorePreviousHashEntryValue();
       super.visitIntInsn(opcode, operand);
     }
 
+    @Override
     public void visitJumpInsn(int opcode, Label label) {
       restorePreviousHashEntryValue();
       super.visitJumpInsn(opcode, label);
     }
 
+    @Override
     public void visitLabel(Label label) {
       restorePreviousHashEntryValue();
       super.visitLabel(label);
     }
 
+    @Override
     public void visitLdcInsn(Object cst) {
       restorePreviousHashEntryValue();
       super.visitLdcInsn(cst);
     }
 
+    @Override
     public void visitLineNumber(int line, Label start) {
       restorePreviousHashEntryValue();
       super.visitLineNumber(line, start);
     }
 
+    @Override
     public void visitLocalVariable(String name, String desc, String signature, Label start, Label end, int index) {
       restorePreviousHashEntryValue();
       super.visitLocalVariable(name, desc, signature, start, end, index);
     }
 
+    @Override
     public void visitLookupSwitchInsn(Label dflt, int[] keys, Label[] labels) {
       restorePreviousHashEntryValue();
       super.visitLookupSwitchInsn(dflt, keys, labels);
     }
 
+    @Override
     public void visitMaxs(int maxStack, int maxLocals) {
       restorePreviousHashEntryValue();
       super.visitMaxs(maxStack, maxLocals);
     }
 
+    @Override
     public void visitMethodInsn(int opcode, String owner, String name, String desc) {
       restorePreviousHashEntryValue();
       super.visitMethodInsn(opcode, owner, name, desc);
     }
 
+    @Override
     public void visitMultiANewArrayInsn(String desc, int dims) {
       restorePreviousHashEntryValue();
       super.visitMultiANewArrayInsn(desc, dims);
     }
 
+    @Override
     public AnnotationVisitor visitParameterAnnotation(int parameter, String desc, boolean visible) {
       restorePreviousHashEntryValue();
       return super.visitParameterAnnotation(parameter, desc, visible);
     }
 
+    @Override
     public void visitTableSwitchInsn(int min, int max, Label dflt, Label[] labels) {
       restorePreviousHashEntryValue();
       super.visitTableSwitchInsn(min, max, dflt, labels);
     }
 
+    @Override
     public void visitTryCatchBlock(Label start, Label end, Label handler, String type) {
       restorePreviousHashEntryValue();
       super.visitTryCatchBlock(start, end, handler, type);
     }
 
+    @Override
     public void visitTypeInsn(int opcode, String type) {
       restorePreviousHashEntryValue();
       super.visitTypeInsn(opcode, type);
@@ -764,16 +910,16 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
 
     private void restorePreviousHashEntryValue() {
       if (previousIsHashEntryValue) {
-        super.visitFieldInsn(GETFIELD, "java/util/concurrent/ConcurrentHashMap$HashEntry", "value", "Ljava/lang/Object;");
+        super.visitFieldInsn(GETFIELD, "java/util/concurrent/ConcurrentHashMap$HashEntry", "value",
+                             "Ljava/lang/Object;");
       }
       previousIsHashEntryValue = false;
     }
 
+    @Override
     public void visitFieldInsn(int opcode, String owner, String name, String desc) {
-      if (GETFIELD == opcode
-          && "java/util/concurrent/ConcurrentHashMap$HashEntry".equals(owner)
-          && "value".equals(name)
-          && "Ljava/lang/Object;".equals(desc)) {
+      if (GETFIELD == opcode && "java/util/concurrent/ConcurrentHashMap$HashEntry".equals(owner)
+          && "value".equals(name) && "Ljava/lang/Object;".equals(desc)) {
         previousIsHashEntryValue = true;
       } else {
         restorePreviousHashEntryValue();
@@ -781,6 +927,7 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
       }
     }
 
+    @Override
     public void visitVarInsn(int opcode, int var) {
       if (previousIsHashEntryValue && ASTORE == opcode) {
         super.visitInsn(POP);
@@ -792,111 +939,133 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
       super.visitVarInsn(opcode, var);
     }
 
+    @Override
     public AnnotationVisitor visitAnnotation(String desc, boolean visible) {
       restorePreviousHashEntryValue();
       return super.visitAnnotation(desc, visible);
     }
 
+    @Override
     public AnnotationVisitor visitAnnotationDefault() {
       restorePreviousHashEntryValue();
       return super.visitAnnotationDefault();
     }
 
+    @Override
     public void visitAttribute(Attribute attr) {
       restorePreviousHashEntryValue();
       super.visitAttribute(attr);
     }
 
+    @Override
     public void visitCode() {
       restorePreviousHashEntryValue();
       super.visitCode();
     }
 
+    @Override
     public void visitEnd() {
       restorePreviousHashEntryValue();
       super.visitEnd();
     }
 
+    @Override
     public void visitFrame(int type, int local, Object[] local2, int stack, Object[] stack2) {
       restorePreviousHashEntryValue();
       super.visitFrame(type, local, local2, stack, stack2);
     }
 
+    @Override
     public void visitIincInsn(int var, int increment) {
       restorePreviousHashEntryValue();
       super.visitIincInsn(var, increment);
     }
 
+    @Override
     public void visitInsn(int opcode) {
       restorePreviousHashEntryValue();
       super.visitInsn(opcode);
     }
 
+    @Override
     public void visitIntInsn(int opcode, int operand) {
       restorePreviousHashEntryValue();
       super.visitIntInsn(opcode, operand);
     }
 
+    @Override
     public void visitJumpInsn(int opcode, Label label) {
       restorePreviousHashEntryValue();
       super.visitJumpInsn(opcode, label);
     }
 
+    @Override
     public void visitLabel(Label label) {
       restorePreviousHashEntryValue();
       super.visitLabel(label);
     }
 
+    @Override
     public void visitLdcInsn(Object cst) {
       restorePreviousHashEntryValue();
       super.visitLdcInsn(cst);
     }
 
+    @Override
     public void visitLineNumber(int line, Label start) {
       restorePreviousHashEntryValue();
       super.visitLineNumber(line, start);
     }
 
+    @Override
     public void visitLocalVariable(String name, String desc, String signature, Label start, Label end, int index) {
       restorePreviousHashEntryValue();
       super.visitLocalVariable(name, desc, signature, start, end, index);
     }
 
+    @Override
     public void visitLookupSwitchInsn(Label dflt, int[] keys, Label[] labels) {
       restorePreviousHashEntryValue();
       super.visitLookupSwitchInsn(dflt, keys, labels);
     }
 
+    @Override
     public void visitMaxs(int maxStack, int maxLocals) {
       restorePreviousHashEntryValue();
       super.visitMaxs(maxStack, maxLocals);
     }
 
+    @Override
     public void visitMethodInsn(int opcode, String owner, String name, String desc) {
       restorePreviousHashEntryValue();
       super.visitMethodInsn(opcode, owner, name, desc);
     }
 
+    @Override
     public void visitMultiANewArrayInsn(String desc, int dims) {
       restorePreviousHashEntryValue();
       super.visitMultiANewArrayInsn(desc, dims);
     }
 
+    @Override
     public AnnotationVisitor visitParameterAnnotation(int parameter, String desc, boolean visible) {
       restorePreviousHashEntryValue();
       return super.visitParameterAnnotation(parameter, desc, visible);
     }
 
+    @Override
     public void visitTableSwitchInsn(int min, int max, Label dflt, Label[] labels) {
       restorePreviousHashEntryValue();
       super.visitTableSwitchInsn(min, max, dflt, labels);
     }
 
+    @Override
     public void visitTryCatchBlock(Label start, Label end, Label handler, String type) {
       restorePreviousHashEntryValue();
       super.visitTryCatchBlock(start, end, handler, type);
     }
 
+    @Override
     public void visitTypeInsn(int opcode, String type) {
       restorePreviousHashEntryValue();
       super.visitTypeInsn(opcode, type);
@@ -908,6 +1077,7 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
       super(mv);
     }
 
+    @Override
     public void visitMethodInsn(int opcode, String owner, String name, String desc) {
       super.visitMethodInsn(opcode, owner, name, desc);
       if ("lock".equals(name) && "()V".equals(desc)) {
@@ -917,11 +1087,11 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
 
     public void addLogicalInvokeMethodCall() {
       ByteCodeUtil.pushThis(mv);
-      mv.visitFieldInsn(GETFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH,
-                        PARENT_CONCURRENT_HASH_MAP_FIELD_NAME, "Ljava/util/concurrent/ConcurrentHashMap;");
+      mv.visitFieldInsn(GETFIELD, CONCURRENT_HASH_MAP_SEGMENT_SLASH, PARENT_CONCURRENT_HASH_MAP_FIELD_NAME,
+                        "Ljava/util/concurrent/ConcurrentHashMap;");
       mv.visitLdcInsn(SerializationUtil.CLEAR_SIGNATURE);
 
-      mv.visitLdcInsn(new Integer(0));
+      mv.visitLdcInsn(Integer.valueOf(0));
       mv.visitTypeInsn(ANEWARRAY, "java/lang/Object");
 
       mv.visitMethodInsn(INVOKESTATIC, "com/tc/object/bytecode/ManagerUtil", "logicalInvoke",
@@ -934,6 +1104,7 @@ public class JavaUtilConcurrentHashMapSegmentAdapter extends ClassAdapter implem
       super(mv);
     }
 
+    @Override
     public void visitMethodInsn(int opcode, String owner, String name, String desc) {
       if ("lock".equals(name) && "()V".equals(desc)) {
         name = TC_READLOCK_METHOD_NAME;
