@@ -1,8 +1,8 @@
 /*
- * All content copyright (c) 2003-2008 Terracotta, Inc., except as may otherwise be noted in a separate copyright notice.  All rights reserved.
+ * All content copyright (c) 2003-2008 Terracotta, Inc., except as may otherwise be noted in a separate copyright
+ * notice. All rights reserved.
  */
 package com.tc.object.bytecode;
-
 
 import com.tc.asm.ClassVisitor;
 import com.tc.asm.MethodAdapter;
@@ -16,10 +16,12 @@ public class TreeMapAdapter {
 
   public static class EntrySetAdapter extends AbstractMethodAdapter {
 
+    @Override
     public MethodVisitor adapt(ClassVisitor classVisitor) {
       return new Adapter(visitOriginal(classVisitor));
     }
 
+    @Override
     public boolean doesOriginalNeedAdapting() {
       return false;
     }
@@ -29,6 +31,7 @@ public class TreeMapAdapter {
         super(mv);
       }
 
+      @Override
       public void visitMethodInsn(int opcode, String owner, String name, String desc) {
         super.visitMethodInsn(opcode, owner, name, desc);
 
@@ -48,10 +51,12 @@ public class TreeMapAdapter {
 
   public static class DeleteEntryAdapter extends AbstractMethodAdapter {
 
+    @Override
     public MethodVisitor adapt(ClassVisitor classVisitor) {
       return new Adapter(visitOriginal(classVisitor));
     }
 
+    @Override
     public boolean doesOriginalNeedAdapting() {
       return false;
     }
@@ -62,10 +67,10 @@ public class TreeMapAdapter {
 
         mv.visitVarInsn(ALOAD, 0);
         mv.visitLdcInsn(SerializationUtil.REMOVE_KEY_SIGNATURE);
-        mv.visitLdcInsn(new Integer(1));
+        mv.visitLdcInsn(Integer.valueOf(1));
         mv.visitTypeInsn(ANEWARRAY, "java/lang/Object");
         mv.visitInsn(DUP);
-        mv.visitLdcInsn(new Integer(0));
+        mv.visitLdcInsn(Integer.valueOf(0));
         mv.visitVarInsn(ALOAD, 1);
         mv.visitMethodInsn(INVOKEVIRTUAL, "java/util/TreeMap$Entry", "getKey", "()Ljava/lang/Object;");
         mv.visitInsn(AASTORE);
@@ -77,10 +82,12 @@ public class TreeMapAdapter {
 
   public static class PutAdapter extends AbstractMethodAdapter {
 
+    @Override
     public MethodVisitor adapt(ClassVisitor classVisitor) {
       return new Adapter(visitOriginal(classVisitor));
     }
-    
+
+    @Override
     protected MethodVisitor visitOriginal(ClassVisitor classVisitor) {
       MethodVisitor mv = super.visitOriginal(classVisitor);
       mv.visitVarInsn(ALOAD, 0);
@@ -89,6 +96,7 @@ public class TreeMapAdapter {
       return mv;
     }
 
+    @Override
     public boolean doesOriginalNeedAdapting() {
       return false;
     }
@@ -99,9 +107,10 @@ public class TreeMapAdapter {
         super(mv);
       }
 
+      @Override
       public void visitMethodInsn(int opcode, String className, String method, String desc) {
         super.visitMethodInsn(opcode, className, method, desc);
-        
+
         if ((INVOKESPECIAL == opcode) && "<init>".equals(method) && "java/util/TreeMap$Entry".equals(className)) {
           mv.visitVarInsn(ALOAD, 0);
           mv.visitLdcInsn(methodName + description);
@@ -114,15 +123,15 @@ public class TreeMapAdapter {
           mv.visitInsn(DUP);
           mv.visitVarInsn(ALOAD, 0);
           mv.visitLdcInsn(methodName + description);
-          mv.visitLdcInsn(new Integer(2));
+          mv.visitLdcInsn(Integer.valueOf(2));
           mv.visitTypeInsn(ANEWARRAY, "java/lang/Object");
           mv.visitInsn(DUP);
           mv.visitInsn(DUP);
-          mv.visitLdcInsn(new Integer(0));
+          mv.visitLdcInsn(Integer.valueOf(0));
           mv.visitVarInsn(ALOAD, 3);
           mv.visitMethodInsn(INVOKEVIRTUAL, "java/util/TreeMap$Entry", "getKey", "()Ljava/lang/Object;");
           mv.visitInsn(AASTORE);
-          mv.visitLdcInsn(new Integer(1));
+          mv.visitLdcInsn(Integer.valueOf(1));
           mv.visitVarInsn(ALOAD, 2);
           mv.visitInsn(AASTORE);
           mv.visitMethodInsn(INVOKESTATIC, ManagerUtil.CLASS, "logicalInvoke",
