@@ -1,5 +1,6 @@
 /*
- * All content copyright (c) 2003-2008 Terracotta, Inc., except as may otherwise be noted in a separate copyright notice.  All rights reserved.
+ * All content copyright (c) 2003-2008 Terracotta, Inc., except as may otherwise be noted in a separate copyright
+ * notice. All rights reserved.
  */
 package com.tc.util;
 
@@ -27,8 +28,8 @@ public class ListIteratorWrapper implements ListIterator {
     currentIndex = nextIndex();
     realIterator.add(arg0);
     current = arg0;
-    ManagerUtil.logicalInvoke(list, SerializationUtil.ADD_AT_SIGNATURE,
-                              new Object[] { new Integer(currentIndex), arg0 });
+    ManagerUtil.logicalInvoke(list, SerializationUtil.ADD_AT_SIGNATURE, new Object[] { Integer.valueOf(currentIndex),
+        arg0 });
   }
 
   public boolean hasNext() {
@@ -62,15 +63,16 @@ public class ListIteratorWrapper implements ListIterator {
   public void remove() {
     ManagerUtil.checkWriteAccess(list);
     realIterator.remove();
-    ManagerUtil.logicalInvoke(list, SerializationUtil.REMOVE_AT_SIGNATURE, new Object[] { new Integer(currentIndex) });
+    ManagerUtil.logicalInvoke(list, SerializationUtil.REMOVE_AT_SIGNATURE,
+                              new Object[] { Integer.valueOf(currentIndex) });
   }
 
   public void set(Object arg0) {
     ManagerUtil.checkWriteAccess(list);
     realIterator.set(arg0);
     current = arg0;
-    ManagerUtil.logicalInvoke(list, SerializationUtil.SET_SIGNATURE,
-                              new Object[] { new Integer(currentIndex), current });
+    ManagerUtil.logicalInvoke(list, SerializationUtil.SET_SIGNATURE, new Object[] { Integer.valueOf(currentIndex),
+        current });
   }
 
 }
