@@ -1,5 +1,6 @@
 /*
- * All content copyright (c) 2003-2008 Terracotta, Inc., except as may otherwise be noted in a separate copyright notice.  All rights reserved.
+ * All content copyright (c) 2003-2008 Terracotta, Inc., except as may otherwise be noted in a separate copyright
+ * notice. All rights reserved.
  */
 package com.tc.objectserver.persistence.inmemory;
 
@@ -18,11 +19,11 @@ public class InMemoryClassPersistor implements ClassPersistor {
   }
 
   public void storeClass(int clazzId, byte[] clazzBytes) {
-    clazzes.put(new Integer(clazzId), clazzBytes);
+    clazzes.put(Integer.valueOf(clazzId), clazzBytes);
   }
 
   public byte[] retrieveClass(int clazzId) {
-    byte[] clazzbytes = (byte[]) clazzes.get(new Integer(clazzId));
+    byte[] clazzbytes = (byte[]) clazzes.get(Integer.valueOf(clazzId));
     if (clazzbytes == null) { throw new TCRuntimeException("Class bytes not found : " + clazzId); }
     return clazzbytes;
   }
