@@ -1,5 +1,6 @@
 /*
- * All content copyright (c) 2003-2008 Terracotta, Inc., except as may otherwise be noted in a separate copyright notice.  All rights reserved.
+ * All content copyright (c) 2003-2008 Terracotta, Inc., except as may otherwise be noted in a separate copyright
+ * notice. All rights reserved.
  */
 package com.tc.statistics.retrieval.actions;
 
@@ -18,12 +19,11 @@ import java.util.Iterator;
 /**
  * This statistics gives the depths of all the {@link Stage} sinks in a {@link StageManager}.
  * <p/>
- * It will contain a {@link StatisticData} for each of the {@link Stage} present in the
- * {@link StageManager}
+ * It will contain a {@link StatisticData} for each of the {@link Stage} present in the {@link StageManager}
  * <p/>
- * This statistic is a {@link DynamicSRA} meaning that the system will turn on the collection of
- * this statistic only when at least one session has enabled this statistic. When there are no more
- * sessions using this statistic, collection of this statistic will be turned off.
+ * This statistic is a {@link DynamicSRA} meaning that the system will turn on the collection of this statistic only
+ * when at least one session has enabled this statistic. When there are no more sessions using this statistic,
+ * collection of this statistic will be turned off.
  */
 public class SRAStageQueueDepths implements DynamicSRA {
 
@@ -45,14 +45,12 @@ public class SRAStageQueueDepths implements DynamicSRA {
   }
 
   public StatisticData[] retrieveStatisticData() {
-    if (!isStatisticsCollectionEnabled()) {
-      return EMPTY_STATISTIC_DATA;
-    }
+    if (!isStatisticsCollectionEnabled()) { return EMPTY_STATISTIC_DATA; }
     Stats[] stats = stageManager.getStats();
     StatisticData[] data = new StatisticData[stats.length];
     for (int i = 0; i < stats.length; i++) {
-      StageQueueStats stageStat = (StageQueueStats)stats[i];
-      data[i] = new StatisticData(ACTION_NAME, stageStat.getName(), new Long(stageStat.getDepth()));
+      StageQueueStats stageStat = (StageQueueStats) stats[i];
+      data[i] = new StatisticData(ACTION_NAME, stageStat.getName(), Long.valueOf(stageStat.getDepth()));
     }
     return data;
   }
@@ -61,9 +59,7 @@ public class SRAStageQueueDepths implements DynamicSRA {
     synchronized (stageManager) {
       Collection stages = stageManager.getStages();
       for (Iterator it = stages.iterator(); it.hasNext();) {
-        if (((Stage)it.next()).getSink().isStatsCollectionEnabled()) {
-          return true;
-        }
+        if (((Stage) it.next()).getSink().isStatsCollectionEnabled()) { return true; }
       }
     }
     return false;
@@ -73,7 +69,7 @@ public class SRAStageQueueDepths implements DynamicSRA {
     synchronized (stageManager) {
       Collection stages = stageManager.getStages();
       for (Iterator it = stages.iterator(); it.hasNext();) {
-        ((Stage)it.next()).getSink().enableStatsCollection(true);
+        ((Stage) it.next()).getSink().enableStatsCollection(true);
       }
     }
   }
@@ -82,7 +78,7 @@ public class SRAStageQueueDepths implements DynamicSRA {
     synchronized (stageManager) {
       Collection stages = stageManager.getStages();
       for (Iterator it = stages.iterator(); it.hasNext();) {
-        ((Stage)it.next()).getSink().enableStatsCollection(false);
+        ((Stage) it.next()).getSink().enableStatsCollection(false);
       }
     }
   }
